crates/tests/src/snapshots/fe_compiler_tests__compile_errors__circular_dependency_create2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `Foo.create2(...)` called within `Foo` creates an illegal circular dependency
  ┌─ compile_errors/circular_dependency_create2.fe:3:20
  │
3 │         foo: Foo = Foo.create2(2, 0)
  │                    ^^^^^^^^^^^ Contract creation
  │
  = Note: Consider using a dedicated factory contract to create instances of `Foo`


